# HSO_comment_detailed_comments

./: .gitignore  CMakeLists.txt  README.md  build.sh  mono_hso.sh
include/hso/: CoarseTracker.h  ImageReader.h  backward.hpp  bundle_adjustment.h  camera.h  config.h  depth_filter.h  feature.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  initialization.h  map.h  matcher.h  point.h  reprojector.h  system.h
include/hso/vikit/: robust_cost.h
ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/devel/share/hso_ros/cmake/: hso_rosConfig.cmake
ros/src/hso_ros/: CMakeLists.txt  package.xml
ros/src/hso_ros/config/: bag_load.yaml  usb_cam_imu.yaml
ros/src/hso_ros/config/cameras/: gazebo.txt  usb_cam.yaml
ros/src/hso_ros/result/: KeyFrameTrajectory.txt  MH01_ros_0.txt  MH02_ros_0.txt  MH03_ros_0.txt  MH04_ros_0.txt  MH05_ros_0.txt
ros/src/hso_ros/src/: ros_mono.cpp
src/: CoarseTracker.cpp  ImageReader.cpp  backward.cpp  bundle_adjustment.cpp  camera.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  system.cpp
src/vikit/: math_utils.cpp
test/: euroc_batch.sh  single_sequence.sh  test_dataset.cpp
test/cameras/: realsense.txt  usb_cam.txt
test/result/: KeyFrameTrajectory.txt  MH01_0.txt  MH02_0.txt  MH03_0.txt  MH04_0.txt  MH05_0.txt
test/timestamp/: time.txt
